@@ -1160,6 +1160,9 @@ public class DataNode extends Configured
       checkBlockToken(new ExtendedBlock(bpId, blockIds[i]),
           tokens.get(i), BlockTokenSecretManager.AccessMode.READ);
     }
+
+    DataNodeFaultInjector.get().getHdfsBlocksMetadata();
+
     return data.getHdfsBlocksMetadata(bpId, blockIds);
   }
   
