@@ -357,6 +357,8 @@ Release 2.4.0 - UNRELEASED
     HDFS-6086. Fix a case where zero-copy or no-checksum reads were not allowed
     even when the block was cached (cmccabe)
 
+    HDFS-6079. Timeout for getFileBlockStorageLocations does not work. (wang)
+
   BREAKDOWN OF HDFS-5698 SUBTASKS AND RELATED JIRAS
 
     HDFS-5717. Save FSImage header in protobuf. (Haohui Mai via jing9)
